# photon-stm32h743

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
app/: CMakeLists.txt
app/app_core/Inc/: app_adc_battery.h  app_battery.h  app_led.h  app_light.h  app_manage.h  app_motor.h  app_network.h  app_ultrasonic.h  app_version.h
app/app_core/Src/: app_adc_battery.c  app_battery.c  app_led.c  app_light.c  app_manage.c  app_motor.c  app_network.c  app_ultrasonic.c  app_version.c
app/share/Inc/: log_print.h  match_mode.h
app/share/Src/: log_print.c  match_mode.c
cmake/: arm-none-eabi-gcc.cmake  build.bat  build.sh
docs/: porting_guide.md
drivers/: CMakeLists.txt
drivers/battery/: adc_sample_dev.c  battery_dev.c  battery_dev.h  xingneng_dev.c
drivers/delay/: delay_dev.c  delay_dev.h
drivers/eth_phy/: eth_phy.c  eth_phy.h
drivers/iap/: iap.c  iap.h
drivers/light/: light_dev.c  light_dev.h  tm512ac_dev.c
drivers/motor/: hub_motor_dev.c  motor_dev.c  motor_dev.h
drivers/net/: net1_dev.c  net_dev.c  net_dev.h  tcp_echo.c  tcp_echo.h
drivers/pcf8574/: pcf8574.c  pcf8574.h
drivers/ultrasonic/: dypa21_dev.c  ultrasonic_dev.c  ultrasonic_dev.h
interface/: CMakeLists.txt
interface/ADC/: adc_dev.c  adc_dev.h
interface/DELAY/: delay_dev.c  delay_dev.h
interface/ETHERNET/: eth_dev.c  eth_dev.h
interface/FDCAN/: can_dev.c  can_dev.h
interface/FLASH/: flash_dev.c  flash_dev.h
interface/GPIO/: gpio_dev.c
interface/IIC/: my_i2c.c
interface/SPI/: spi_dev.h
interface/UART/: uart_dev.c  uart_dev.h
interface/adc/: adc_dev.c  adc_dev.h
interface/can/: can_dev.c  can_dev.h
interface/dac/: dac_dev.c  dac_dev.h
interface/ethernet/: eth_dev.c
interface/flash/: flash_dev.c  flash_dev.h
interface/gpio/: gpio_dev.c  gpio_dev.h
interface/i2s/: i2s_dev.c  i2s_dev.h
interface/iic/: i2c_dev.c  i2c_dev.h  my_i2c.h
interface/lp/: lp_dev.c  lp_dev.h
interface/qspi/: qspi_dev.c  qspi_dev.h
interface/rng/: rng_dev.c  rng_dev.h
interface/rtc/: rtc_dev.c  rtc_dev.h
interface/spi/: spi_dev.c
interface/tim/: cap_dev.c  cap_dev.h  pwm_dev.c  pwm_dev.h
interface/uart/: uart_dev.c  uart_dev.h
interface/wdg/: wdg_dev.c  wdg_dev.h
keil/: Photon.uvprojx
port/: CMakeLists.txt
port/freertos/: FreeRTOSConfig.c  FreeRTOSConfig.h
port/lwip/arch/: ethernetif.c  ethernetif.h  lwipopts.h
port/lwip/common/: lwip_port.c  lwip_port.h
port/stm32h743/: STM32H743IITx_FLASH.ld
port/stm32h743/bsp/: bsp_adc.c  bsp_adc.h  bsp_cap.c  bsp_cap.h  bsp_dac.c  bsp_dac.h  bsp_eth.c  bsp_eth.h  bsp_fdcan.c  bsp_fdcan.h  bsp_flash.c  bsp_flash.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c.c  bsp_i2c.h  bsp_i2s.c  bsp_i2s.h  bsp_pwm.c  bsp_pwm.h  bsp_qspi.c  bsp_qspi.h  bsp_rng.c  bsp_rng.h  bsp_rtc.c  bsp_rtc.h  bsp_spi.c  bsp_spi.h  bsp_uart.c  bsp_uart.h  bsp_wdg.c  bsp_wdg.h  stm_flash.c  stm_flash.h
port/stm32h743/startup/gcc/: startup_stm32h743xx.s
port/stm32h743/system/: gpio.c  main.c  main.h  project_config.h  stm32h7xx_hal_conf.h  syscalls.c
tools/: update_uvproj.py
